src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Sku_Override__c</fullName>
        <description>Override the products Sku at the price book entry level</description>
        <inlineHelpText>Override the products Sku at the price book entry level</inlineHelpText>
        <label>Sku Override</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <formula>BLANKVALUE(Sku_Override__c , Product2.SKU__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>